# RoboticLabeling

./: CMakeLists.txt
include/: Classifier.h  Edges.h  GraphSegmentation.h  Labeling.h  RegionTree.h  Segments.h
src/: BuildDataset.cpp  CMakeLists.txt  Classifier.cpp  GraphSegmentation.cpp  Labeling.cpp  RegionTree.cpp
